--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Eike Lurz",
   "license": "ISC",
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.3.2",
+    "@types/bcrypt": "^3.0.0",
     "@types/moment": "^2.13.0",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
@@ -24,9 +24,12 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@panva/jose": "^1.6.1",
+    "base64url": "^3.0.1",
+    "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "envalid": "^5.0.0",
     "graphql-yoga": "^1.18.1",
-    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "pg": "^7.12.0",
     "reflect-metadata": "^0.1.13",
