--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+node_modules/ 
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -87,3 +87,6 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+# Project specific
+dist/
