--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,6 @@ services:
 
   adminer:
     image: adminer:latest
-    restart: always
+    restart: unless-stopped
     ports:
       - 8080:8080
