--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "test": "jest",
-    "dev": "tsnd -P tsconfig.json --respawn --transpileOnly src/index.ts",
+    "dev": "tsnd -P tsconfig.json --respawn --transpileOnly --debounce 1000 src/index.ts",
     "build": "tsc",
     "lint": "tslint --format stylish",
     "lint:fix": "tslint --format stylish --fix",
@@ -25,6 +25,7 @@
     "graphql-yoga": "^1.18.1",
     "moment": "^2.24.0",
     "pg": "^7.12.1",
+    "pino": "^5.13.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.4",
     "typeorm": "^0.2.18"
@@ -32,8 +33,10 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/moment": "^2.13.0",
+    "@types/pino": "^5.8.9",
     "@types/ws": "^6.0.2",
     "jest": "^24.8.0",
+    "pino-pretty": "^3.2.1",
     "prettier": "^1.18.2",
     "ts-node-dev": "^1.0.0-pre.40",
     "tsconfig-paths": "^3.8.0",
