--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
-    "typeRoots": ["node_modules/@types", "src/@types"],
+    "typeRoots": ["src/@types", "node_modules/@types"],
     "types": ["node"],
     "noUnusedLocals": true,
     "noUnusedParameters": true,
