chages linux file system rights to 755

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: '3.7'
 services:
   db:
     image: postgres:alpine
@@ -15,4 +15,4 @@ services:
     image: adminer:latest
     restart: unless-stopped
     ports:
-      - 8080:8080
+      - 8081:8080
