refactore to use di

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "test": "jest",
-    "dev": "tsnd -P tsconfig.json --respawn --transpileOnly --debounce 1000 src/index.ts",
+    "dev": "tsnd --project tsconfig.json --transpileOnly --respawn src/index.ts",
     "build": "tsc",
     "lint": "tslint --format stylish",
     "lint:fix": "tslint --format stylish --fix",
@@ -17,14 +17,13 @@
     "db:migrate:generate": "npm run typeorm migration generate -n"
   },
   "dependencies": {
-    "@panva/jose": "^1.9.1",
+    "@panva/jose": "^1.9.2",
     "base64url": "^3.0.1",
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "envalid": "^5.0.0",
     "graphql-yoga": "^1.18.3",
     "moment": "^2.24.0",
-    "pg": "^7.12.1",
     "pino": "^5.13.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.5",
@@ -32,13 +31,19 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/jest": "^24.0.18",
     "@types/moment": "^2.13.0",
+    "@types/pg": "^7.11.1",
     "@types/pino": "^5.8.10",
+    "@types/supertest": "^2.0.8",
     "@types/ws": "^6.0.3",
     "jest": "^24.9.0",
+    "pg": "^7.12.1",
     "pino-pretty": "^3.2.1",
     "prettier": "^1.18.2",
-    "ts-node-dev": "^1.0.0-pre.42",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
+    "ts-node-dev": "^1.0.0-pre.43",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
