--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "test": "jest",
-    "dev": "tsnd --project tsconfig.json --transpileOnly --respawn src/index.ts",
+    "dev": "ts-node-dev -P tsconfig.json --respawn -T src/index.ts",
+    "build:watch": "tsc -w",
     "build": "tsc",
     "lint": "tslint --format stylish",
     "lint:fix": "tslint --format stylish --fix",
@@ -15,6 +16,9 @@
     "db:migrate": "npm run typeorm migration:run",
     "db:migrate:revert": "npm run typeorm migration:revert",
     "db:migrate:generate": "npm run typeorm migration generate -n"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "dependencies": {
     "@panva/jose": "^1.9.2",
@@ -24,7 +28,7 @@
     "envalid": "^5.0.0",
     "graphql-yoga": "^1.18.3",
     "moment": "^2.24.0",
-    "pino": "^5.13.3",
+    "pino": "^5.13.4",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^0.17.5",
     "typeorm": "^0.2.19"
@@ -33,7 +37,8 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^24.0.18",
     "@types/moment": "^2.13.0",
-    "@types/pg": "^7.11.1",
+    "@types/node": "^12.7.8",
+    "@types/pg": "^7.11.2",
     "@types/pino": "^5.8.10",
     "@types/supertest": "^2.0.8",
     "@types/ws": "^6.0.3",
