--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2019",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true,
+    "inlineSourceMap": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["es2019", "esnext.asynciterable"],
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "typeRoots": ["src/@types", "node_modules/@types"],
-    "types": ["jest", "node"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -17,9 +16,13 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "pretty": true,
-    "sourceMap": false
+    "sourceMap": false,
+    // "listFiles": false,
+    "lib": ["es2019", "esnext.asynciterable"],
+    "types": ["node", "jest"],
+    "typeRoots": ["src/@types", "node_modules/@types"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.test.ts"],
+  "exclude": ["node_modules"],
   "compileOnSave": false
 }
