⬆️ Npm audit fix

--- a/package.json
+++ b/package.json
@@ -21,38 +21,38 @@
     "node": "12.x"
   },
   "dependencies": {
-    "@panva/jose": "^1.9.2",
     "base64url": "^3.0.1",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "envalid": "^5.0.0",
-    "graphql-yoga": "^1.18.3",
-    "moment": "^2.24.0",
-    "pino": "^5.13.4",
+    "graphql-yoga": "^2.14.2",
+    "jose": "^1.28.0",
+    "moment": "^2.27.0",
+    "pino": "^5.17.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^0.17.5",
-    "typeorm": "^0.2.19"
+    "type-graphql": "^0.17.6",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^24.9.1",
     "@types/moment": "^2.13.0",
-    "@types/node": "^12.7.8",
-    "@types/pg": "^7.11.2",
-    "@types/pino": "^5.8.10",
-    "@types/supertest": "^2.0.8",
-    "@types/ws": "^6.0.3",
-    "jest": "^24.9.0",
-    "pg": "^7.12.1",
-    "pino-pretty": "^3.2.1",
-    "prettier": "^1.18.2",
+    "@types/node": "^12.12.54",
+    "@types/pg": "^7.14.4",
+    "@types/pino": "^5.20.0",
+    "@types/supertest": "^2.0.10",
+    "@types/ws": "^6.0.4",
+    "jest": "^26.4.1",
+    "pg": "^7.18.2",
+    "pino-pretty": "^3.6.1",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "ts-node-dev": "^1.0.0-pre.43",
+    "ts-jest": "^26.2.0",
+    "ts-node-dev": "^1.0.0-pre.59",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.6.3"
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^3.9.7"
   }
 }
